<resources>
    <string name="app_name">MedievalSim</string>

    <!-- Login Screen Strings -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="newAccount">Create New Account</string>
    <string name="title_activity_game_screen">MedievalSim</string>
    <string name="create_character">Create Account</string>
    <string name="emailNew">Email:</string>
    <string name="create_new_account">Create New Account</string>
    <string name="character_name">Character Name:</string>
    <string name="passwordView">Password:</string>
    <string name="repeatPasswordView">Repeat Password:</string>
</resources>
