<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_account_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.christmann.medievalsim.NewAccountScreen">

    <TextView
        android:text="@string/create_character"
        android:layout_width="190dp"
        android:layout_height="0dp"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:textAlignment="center"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="12dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="226dp"
        android:layout_height="0dp"
        android:ems="10"
        android:id="@+id/emailEditText"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="226dp"
        android:layout_height="49dp"
        android:ems="10"
        android:id="@+id/passwordEditText"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/emailEditText"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="227dp"
        android:layout_height="49dp"
        android:ems="10"
        android:id="@+id/repeatPasswordEditText"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/passwordEditText"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/passwordEditText"
        app:layout_constraintHorizontal_bias="1.0"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <TextView
        android:text="@string/emailNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/emailEditText"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="95dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/repeatPasswordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="12sp"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/repeatPasswordEditText"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="3dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:text="@string/passwordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/passwordEditText"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:text="@string/character_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="144dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="152dp"
        android:layout_height="41dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/characterNameEditText"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        tools:layout_constraintBaseline_creator="1"
        tools:ignore="LabelFor" />

    <Button
        android:text="@string/create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newAccountBtn"
        style="@android:style/Widget.Holo.Button"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="39dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
